<resources>
    <string name="app_name">Guau Guau</string>
    <string name="titulo_splash">GUAU GUAU</string>
    <string name="hint_correo">correo@gmail.com</string>
    <string name="hint_reg_nombre">nombre</string>
    <string name="hint_reg_apellido">apellido</string>
    <string name="hint_reg_documento">documento</string>
    <string name="hint_reg_sexo_m">masculino</string>
    <string name="hint_reg_sexo_f">femenino</string>
    <string name="hint_reg_direccion">dirección</string>
    <string name="hint_reg_distrito">distrito</string>
    <string name="hint_reg_clave">clave</string>
    <string name="hint_reg_telefono">teléfono</string>
    <string name="hint_reg_reclave">confirme clave</string>
    <string name="hint_clave">clave</string>
    <string name="boton_Login">Login</string>
    <string name="boton_RecuperaClave">Enviar</string>
    <string name="boton_Registrase_a">Aceptar</string>
    <string name="boton_Registrase_b">Cancelar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Christian Escobar</string>
    <string name="nav_header_subtitle">Christian.mahlj@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Adicionar</string>
    <string name="action_settings1">Modificar</string>
    <string name="action_settings2">Eliminar</string>

    <string name="menu_home">Mascotas</string>
    <string name="menu_gallery">Vacunas</string>
    <string name="menu_slideshow">Mapas</string>
    <!--string name="menu_tools"></string-->
    <string name="menu_share">Perfil</string>
    <!--string name="menu_send">Send</string-->
</resources>
