<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_macotas"
            android:icon="@drawable/pet_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vacunas"
            android:icon="@drawable/icons8_syringe_50"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_mapas"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Datos Personales">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/datos_personal"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
