<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.datosPersonales.view.DatosPersonalesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            style="@style/Titulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:text="Datos Personales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtnombre"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_nombre"
            android:inputType="textPersonName"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_apellido"
            android:inputType="textPersonName"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtnombre" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtApellido" />

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_direccion"
            android:inputType="text"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCorreo" />

        <EditText
            android:id="@+id/edtCelular"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_telefono"
            android:inputType="text"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDireccion" />

        <RadioGroup
            android:id="@+id/grpSexo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCelular">

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:textColor="@color/default_app_green"
                android:text="@string/hint_reg_sexo_m"
                android:theme="@style/CustomCheckBox" />

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/hint_reg_sexo_f"
                android:textColor="@color/default_app_green"
                android:theme="@style/CustomCheckBox" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_clave"
            android:inputType="text"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grpSexo" />

        <EditText
            android:id="@+id/edtConfClave"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_reg_reclave"
            android:inputType="text"
            android:theme="@style/MyTextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtClave" />


        <Button
            android:id="@+id/btnAceptar"
            style="@style/Button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/boton_Registrase_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtConfClave" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>