<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/guau2"
    tools:context=".presentation.login.view.LoginActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="Guau Guau"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:theme="@style/MyTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/edtClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/hint_clave"
        android:inputType="textPassword"
        android:theme="@style/MyTextLabel"
        app:layout_constraintEnd_toStartOf="@+id/ckbClave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreo"></EditText>

    <CheckBox
        android:id="@+id/ckbClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreo"
        app:layout_constraintVertical_bias="0.026" />


    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/boton_redondo"
        android:ems="20"
        android:text="@string/boton_Login"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtClave"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>